--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   <style>
 
   </style>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F93S0SK2GL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-F93S0SK2GL');
+  </script>
 </head>
 
 <body>
