feature: added resources

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
 
+  footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
   </style>
 
   <!-- Google tag (gtag.js) -->
@@ -86,6 +91,29 @@
       <input type="button" value="Transfer Display" id="display-button">
     </div>
   </div>
+
+<footer class="bg-body-tertiary text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+      <b>Resources</b>
+      <div class="container p-4">
+          <div class="row">
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <a href="https://www.ets.org/gre.html" target="_blank">ETS GRE</a>
+                  </div>
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <a href="https://www.manhattanprep.com/gre/" target="_blank">Manhattan GRE Prep</a>
+                  </div>
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                  <a href="https://www.gregmat.com/" target="_blank">GregMat (Affordable Online Prep Service)</a>
+                  </div>
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                  <a href="https://gre.magoosh.com/flashcards/vocabulary" target="_blank">Magoosh Vocab App</a>
+                  </div>
+
+          </div>
+      </div>
+  </div>
+  </footer>
 
   <script>
     let memory = 0;
